--- a/hw1/index.html
+++ b/hw1/index.html
@@ -1,66 +1,130 @@
-<!doctype html>
+<!--<!doctype html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta name="viewport"-->
+<!--          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
+<!--    <meta http-equiv="X-UA-Compatible" content="ie=edge">-->
+<!--    <title>Document</title>-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>-->
+<!--</head>-->
+<!--<body>-->
+
+<!--<div id="app">-->
+
+<!--    <button @click="reverseText" >{{ buttonText }}</button>-->
+<!--    <hr>-->
+<!--    <ul>-->
+<!--        <li v-for="item in list" key="item" @click="deleteElement(item)">-->
+<!--            Новый элемент списка {{ item }}-->
+<!--        </li>-->
+<!--    </ul>-->
+<!--    <button @click="addElement">Добавить элемент</button>-->
+
+<!--</div>-->
+<!--    <script>-->
+
+<!--        var app = new Vue({-->
+<!--            el: '#app',-->
+<!--            data: {-->
+<!--                buttonText: "Перевернуть",-->
+<!--                list: [],-->
+<!--                counter: 0-->
+<!--            },-->
+<!--            methods: {-->
+
+<!--        // 1. Создать кнопку "Перевернуть". При клике на кнопку текст кнопки должен перевернуться и отобразиться в обратном порядке.-->
+<!--                reverseText() {-->
+<!--                  this.buttonText = this.buttonText.split('').reverse().join('');-->
+<!--                },-->
+
+<!--        // 2. Есть список элементов. Пользователь может добавлять новые элементы списка с текстом “Новый элемент списка” нажав на кнопку "Добавить".-->
+<!--                addElement() {-->
+<!--                    this.list.push(this.counter++);-->
+<!--                },-->
+
+<!--        // 3. *Дополнительное задание: При клике на элемент списка он должен быть удален. (по желанию)-->
+<!--                deleteElement(id) {-->
+<!--                    this.list = this.list.filter((item) => item !== id);-->
+<!--                }-->
+
+<!--            },-->
+<!--            computed: {-->
+
+<!--            }-->
+
+
+<!--        })-->
+<!--    </script>-->
+
+
+
+<!--</body>-->
+<!--</html>-->
+
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </head>
+
 <body>
-
 <div id="app">
-
-    <button @click="reverseText" >{{ buttonText }}</button>
-    <hr>
-    <ul>
-        <li v-for="item in list" key="item" @click="deleteElement(item)">
-            Новый элемент списка
-        </li>
-    </ul>
-    <button @click="addElement">Добавить элемент</button>
-
+    <div>
+        <!-- 1. Создать кнопку "Перевернуть". При клике на кнопку текст кнопки должен перевернуться и отобразиться в обратном порядке. -->
+        <button @click="reversWord">{{ textButton }}</button>
+    </div>
+    <div>
+        <!-- 2. Есть список элементов. Пользователь может добавлять новые элементы списка с текстом “Новый элемент списка” нажав на кнопку "Добавить". -->
+        <!-- 3. При клике на элемент списка он должен быть удален. -->
+        <ul>
+            <li v-for="item in itemsList" @click="deleteItem(item)"> {{ item.text }}</li>
+        </ul>
+        <button @click="addItem">Добавить</button>
+    </div>
 </div>
-    <script>
-
-
-
-
-        var app = new Vue({
-            el: '#app',
-            data: {
-                buttonText: "Перевернуть",
-                list: [],
-                counter: 0
-            },
-            methods: {
-
-        // 1. Создать кнопку "Перевернуть". При клике на кнопку текст кнопки должен перевернуться и отобразиться в обратном порядке.
-                reverseText() {
-                  this.buttonText = this.buttonText.split('').reverse().join('');
-                },
-
-        // 2. Есть список элементов. Пользователь может добавлять новые элементы списка с текстом “Новый элемент списка” нажав на кнопку "Добавить".
-                addElement() {
-                    this.list.push(this.counter++);
-                },
-
-        // 3. *Дополнительное задание: При клике на элемент списка он должен быть удален. (по желанию)
-                deleteElement(id) {
-                    this.list = this.list.filter((item) => item !== id);
-                }
-
-            },
-            computed: {
-
-            }
-
-
-        })
-    </script>
-
-
-
 </body>
+<script>
+    new Vue({
+        el: '#app',
+        data: {
+            textButton: 'Перевернуть', // задача 1
+            itemsList: [               // задача 2
+                {
+                    id: 1,
+                    text: 'Элемент 1'
+                },
+                {
+                    id: 2,
+                    text: 'Элемент 2'
+                },
+                {
+                    id: 3,
+                    text: 'Элемент 3'
+                },
+                {
+                    id: 4,
+                    text: 'Элемент 4'
+                }
+            ]
+        },
+        methods: {
+            reversWord() { // задача 1
+                this.textButton = this.textButton.split('').reverse().join('');
+            },
+            addItem() {  // задача 2
+                this.itemsList.push({ id: 5, text: 'Элемент 5' })
+            },
+            deleteItem(item) {  // задача 3
+                console.log(item);
+                this.itemsList.splice(item, 1);
+            }
+        }
+    })
+</script>
+
 </html>
